--- a/index.html
+++ b/index.html
@@ -483,9 +483,9 @@ Eg: &lt;img&gt;, &lt;input&gt;, &lt;button&gt;, etc.,</pre></p>
      </div>
 <hr>
      <div>
-          <audio src="drums_of_liberation.mp3" controls loop muted autoplay>Audio</audio>
-          <video src="luffy-in-winter.960x540.mp4" controls height="170px" width="300px" loop muted autoplay>Video</video>
-          <video src="luffy-in-winter.960x540.mp4" controls height="170px" width="300px" loop muted poster="videoframe_5133.png">Video</video>
+          <audio src="./drums_of_liberation.mp3" controls loop muted autoplay>Audio</audio>
+          <video src="./luffy-in-winter.960x540.mp4" controls height="170px" width="300px" loop muted autoplay>Video</video>
+          <video src="./luffy-in-winter.960x540.mp4" controls height="170px" width="300px" loop muted poster="./videoframe_5133.png">Video</video>
           <iframe src="https://aathi.pythonanywhere.com/" height="170px" width="300px" frameborder="0">iframe</iframe>
      </div>
 <hr>
