--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
 <body>
      <div class="container">
           <div class="file-card">
-               <a href="./code/HyperTextMarkupLanguage.html" target="_blank" class="file-link">File 1</a>
-               <a href="./source1.html" target="_blank" class="source-link">View Source Code</a>
+               <a href="./code/HyperTextMarkupLanguage.html" target="_blank" class="file-link">HTML</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/HyperTextMarkupLanguage.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/CascadingStyleSheet.html" target="_blank" class="file-link">File 2</a>
-               <a href="./source2.html" target="_blank" class="source-link">View Source Code</a>
+               <a href="./code/CascadingStyleSheet.html" target="_blank" class="file-link">CSS Selectors</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/CascadingStyleSheet.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/chess.html" target="_blank" class="file-link">File 1</a>
-               <a href="./source1.html" target="_blank" class="source-link">View Source Code</a>
+               <a href="./code/chess.html" target="_blank" class="file-link">ChessBoard</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/chess.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/List.html" target="_blank" class="file-link">File 2</a>
-               <a href="./source2.html" target="_blank" class="source-link">View Source Code</a>
+               <a href="./code/List.html" target="_blank" class="file-link">List</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/List.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/table.html" target="_blank" class="file-link">File 2</a>
-               <a href="./source2.html" target="_blank" class="source-link">View Source Code</a>
+               <a href="./code/table.html" target="_blank" class="file-link">Table</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/table.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           </a>
      </div>
