--- a/index.html
+++ b/index.html
@@ -52,26 +52,42 @@
 <body>
      <div class="container">
           <div class="file-card">
-               <a href="./code/HyperTextMarkupLanguage.html" target="_blank" class="file-link">HTML</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/HyperTextMarkupLanguage.html" target="_blank" class="source-link">View Source Code</a>
+               <a href="./code/html.html" target="_blank" class="file-link">HTML</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/html.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/CascadingStyleSheet.html" target="_blank" class="file-link">CSS Selectors</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/CascadingStyleSheet.html" target="_blank" class="source-link">View Source Code</a>
+               <a href="./code/css_selectors.html" target="_blank" class="file-link">CSS Selectors</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/css_selectors.html" target="_blank" class="source-link">View Source Code</a>
+          </div>
+          <div class="file-card">
+               <a href="./code/css_properties.html" target="_blank" class="file-link">HTML</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/css_properties.html" target="_blank" class="source-link">View Source Code</a>
+          </div>
+          <div class="file-card">
+               <a href="./code/css_display.html" target="_blank" class="file-link">HTML</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/css_display.html" target="_blank" class="source-link">View Source Code</a>
+          </div>
+          <div class="file-card">
+               <a href="./code/js.html" target="_blank" class="file-link">HTML</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/js.html" target="_blank" class="source-link">View Source Code</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/script.js" target="_blank" class="source-link">View Source Code JS</a>
+          </div>
+          <div class="file-card">
+               <a href="./code/position_ag.html" target="_blank" class="file-link">HTML</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/position_ag.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
                <a href="./code/chess.html" target="_blank" class="file-link">ChessBoard</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/chess.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/List.html" target="_blank" class="file-link">List</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/List.html" target="_blank" class="source-link">View Source Code</a>
+               <a href="./code/list_as.html" target="_blank" class="file-link">List</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/list_as.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/table.html" target="_blank" class="file-link">Table</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/table.html" target="_blank" class="source-link">View Source Code</a>
+               <a href="./code/table_as.html" target="_blank" class="file-link">Table</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/table_as.html" target="_blank" class="source-link">View Source Code</a>
           </div>
-          </a>
      </div>
 </body>
 </html>
