--- a/index.html
+++ b/index.html
@@ -60,33 +60,37 @@
                <a href="https://github.com/Aathi0001/html/blob/main/code/css_selectors.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/css_properties.html" target="_blank" class="file-link">HTML</a>
+               <a href="./code/css_properties.html" target="_blank" class="file-link">CSS Properties</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/css_properties.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/css_display.html" target="_blank" class="file-link">HTML</a>
+               <a href="./code/css_display.html" target="_blank" class="file-link">CSS Display, Positions, etc.,</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/css_display.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/js.html" target="_blank" class="file-link">HTML</a>
+               <a href="./code/js.html" target="_blank" class="file-link">JavaScriptL</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/js.html" target="_blank" class="source-link">View Source Code</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/script.js" target="_blank" class="source-link">View Source Code JS</a>
           </div>
           <div class="file-card">
-               <a href="./code/position_ag.html" target="_blank" class="file-link">HTML</a>
+               <a href="./code/position_ag.html" target="_blank" class="file-link">Display, Position, etc., Assignment</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/position_ag.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/chess.html" target="_blank" class="file-link">ChessBoard</a>
+               <a href="./code/chess.html" target="_blank" class="file-link">ChessBoard Assignment</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/chess.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/list_as.html" target="_blank" class="file-link">List</a>
+               <a href="./code/list_as.html" target="_blank" class="file-link">List Assignment</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/list_as.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/table_as.html" target="_blank" class="file-link">Table</a>
+               <a href="./code/table_as.html" target="_blank" class="file-link">Table Assignment</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/table_as.html" target="_blank" class="source-link">View Source Code</a>
+          </div>
+          <div class="file-card">
+               <a href="./code/flex_poster_as.html" target="_blank" class="file-link">Poster Assignment</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/flex_poster_as.html" target="_blank" class="source-link">View Source Code</a>
           </div>
      </div>
 </body>
