--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
 <body>
      <div class="container">
           <div class="file-card">
+               <a href="./code/java.html" target="_blank" class="file-link">Java Program</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/java.html" target="_blank" class="source-link">View Source Code</a>
+          </div>
+          <div class="file-card">
+               <a href="./code/java_notes.html" target="_blank" class="file-link">Java Notes</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/java_notes.html" target="_blank" class="source-link">View Source Code</a>
+          </div>
+          <div class="file-card">
                <a href="./code/html.html" target="_blank" class="file-link">HTML</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/html.html" target="_blank" class="source-link">View Source Code</a>
           </div>
@@ -95,3 +103,4 @@
      </div>
 </body>
 </html>
+
