--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                text-decoration: none;
                
           }
+          @media (max-width: 600px) {
+              .file-card {
+                  flex: 0 1 100%;
+              }
+          }
+
      </style>
 </head>
 <body>
