--- a/code/java.html
+++ b/code/java.html
@@ -157,7 +157,21 @@
 <div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t133.java" target="_blank">t133</a><div class="desc">Object class: toString(), equals(), hashCode(), getClass()</div></div>
 <div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t134.java" target="_blank">t134</a><div class="desc">Object class: finalize()</div></div>
 <div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t135.java" target="_blank">t135</a><div class="desc">Object class: clone()</div></div>
-<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t136.java" target="_blank">t136</a><div class="desc"></div></div>  
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t136.java" target="_blank">t136</a><div class="desc">String, StringBuffer, StringBuilder</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t137.java" target="_blank">t137</a><div class="desc">Exception handling , Custom Checked & Unchecked</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t138.java" target="_blank">t138</a><div class="desc">UncheckedPropagation</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t139.java" target="_blank">t139</a><div class="desc">checkedPropagation</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t140.java" target="_blank">t140</a><div class="desc">FileHandling eg1</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t141.java" target="_blank">t141</a><div class="desc">FileHandling eg2</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t142.java" target="_blank">t142</a><div class="desc">FileHandling eg3</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t143.java" target="_blank">t143</a><div class="desc">FileHandling eg4</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t144.java" target="_blank">t144</a><div class="desc">Serialization and deserialization</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t145.java" target="_blank">t145</a><div class="desc">Wrapper class boxing, unboxing, autoboxing, autounboxing</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t146.java" target="_blank">t146</a><div class="desc">parsing</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t147.java" target="_blank">t147</a><div class="desc">Number and object</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t148.java" target="_blank">t148</a><div class="desc">Genric Example</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t149.java" target="_blank">t149</a><div class="desc">Genric Example</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t150.java" target="_blank">t150</a><div class="desc">Sort Methods in list</div></div>
 </div>
 </body>
 </html>
