--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                <a href="https://github.com/Aathi0001/html/blob/main/code/css_display.html" target="_blank" class="source-link">View Source Code</a>
           </div>
           <div class="file-card">
-               <a href="./code/js.html" target="_blank" class="file-link">JavaScriptL</a>
+               <a href="./code/js.html" target="_blank" class="file-link">JavaScript</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/js.html" target="_blank" class="source-link">View Source Code</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/script.js" target="_blank" class="source-link">View Source Code JS</a>
           </div>
@@ -110,5 +110,6 @@
      </div>
 </body>
 </html>
+
 
 
