--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 <body>
      <div class="container">
           <div class="file-card">
+               <a href="./code/db.html" target="_blank" class="file-link">DB</a>
+               <a href="https://github.com/Aathi0001/html/blob/main/code/db.html" target="_blank" class="source-link">View Source Code</a>
+          </div>
+          <div class="file-card">
                <a href="./code/java.html" target="_blank" class="file-link">Java Program</a>
                <a href="https://github.com/Aathi0001/html/blob/main/code/java.html" target="_blank" class="source-link">View Source Code</a>
           </div>
@@ -110,6 +114,7 @@
      </div>
 </body>
 </html>
+
 
 
 
