--- a/code/db.html
+++ b/code/db.html
@@ -98,7 +98,7 @@ th {
   <div class="topic">
   <h2>Data</h2>
   <p>
-    <b>Data</b> is raw facts and figures which have no context or meaning by themselves. 
+    <b>Data</b> are the rawfacts(value) which describes attributes(properties) of an entity. It is raw facts and figures which have no context or meaning by themselves. 
     Example: numbers, names, dates, etc.
   </p>
   <p><b>Example:</b> "100", "Aathi", "2025-08-20"</p>
@@ -107,7 +107,7 @@ th {
 <div class="topic">
   <h2>Database</h2>
   <p>
-    A <b>Database</b> is an organized collection of data stored electronically, 
+    A <b>Database</b> are the place or a medium where we are storing the data in a systematic and organized manner. It is an organized collection of data stored electronically, 
     which can be easily accessed, managed, and updated.
   </p>
   <p><b>Example:</b> Student Management Database stores student details, marks, courses, etc.</p>
@@ -116,8 +116,10 @@ th {
 <div class="topic">
   <h2>DBMS (Database Management System)</h2>
   <p>
-    A <b>DBMS</b> is software that is used to create, manage, and manipulate databases. 
-    It provides an interface between the user and the database.
+    <li>A <b>DBMS</b> is software that is used to create, manage, and manipulate databases. 
+    It provides an interface between the user and the database.</li>
+    <li>DBMS store the data in file format.</li>
+    <li>To communicate with the DBMS we are using Query Language.</li>
   </p>
   <p><b>Examples:</b> MySQL, Oracle, SQL Server, PostgreSQL, SQLite</p>
 </div>
@@ -135,8 +137,10 @@ th {
 <div class="topic">
   <h2>RDBMS (Relational Database Management System)</h2>
   <p>
-    <b>RDBMS</b> is a type of DBMS where data is stored in tables, and relationships exist between tables 
-    using <b>Primary Key</b> and <b>Foreign Key</b>.
+    <li><b>RDBMS</b> is a type of DBMS where data is stored in tables, and relationships exist between tables 
+    using <b>Primary Key</b> and <b>Foreign Key</b>.</li>
+    <li>RDBMS store the data in table format.</li>
+    <li>To communicate with the RDBMS we are using Structured Query Language.</li>
   </p>
   <p><b>Examples:</b> MySQL, Oracle, PostgreSQL, SQL Server</p>
 </div>
