--- a/code/java.html
+++ b/code/java.html
@@ -172,6 +172,12 @@
 <div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t148.java" target="_blank">t148</a><div class="desc">Genric Example</div></div>
 <div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t149.java" target="_blank">t149</a><div class="desc">Genric Example</div></div>
 <div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t150.java" target="_blank">t150</a><div class="desc">Sort Methods in list</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t151.java" target="_blank">t151</a><div class="desc">List Interface</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t152.java" target="_blank">t152</a><div class="desc">Set Interface</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t153.java" target="_blank">t153</a><div class="desc">Queue Interface</div></div>
+<div class="link-box"><a href="https://github.com/Aathi0001/Java/blob/main/test1/t154.java" target="_blank">t154</a><div class="desc">Map Interface</div></div>
+
 </div>
 </body>
 </html>
+
