--- a/code/db.html
+++ b/code/db.html
@@ -183,6 +183,11 @@ th {
 
 <div class="topic">
   <h2>E.F. Codd's Rules (RDBMS Rules)</h2>
+  <li>A data entered in a ell must be a single value data or atomic.</li>
+  <li>In RDBMS we are storing in table format along with the meta data</li>
+  <li>We can store the data in multiple tables with the helps of key attributes.</li>
+  <li>We validate the data entired in a cell by two steps, By assigning datatype and By assigning Constraints</li>
+  <li>Datatype is manditory but constraints are optional.</li>
   <p>
     Dr. Edgar F. Codd, the father of RDBMS, proposed 13 rules (numbered 0 to 12) 
     that define what a true Relational Database Management System (RDBMS) should follow.
